--- a/style.css
+++ b/style.css
@@ -1,8 +1,4 @@
-*{
-    margin:0;
-    padding:0;
-    box-sizing: border-box;
-}
+
 
 
 
@@ -18,6 +14,7 @@ body{
 .half-width{
 
 width: 50%;
+margin-bottom: 50px;
 
 
 
@@ -45,7 +42,7 @@ font-size: 35px;
 
 
 }
-.half-width img
+.first-pic
 {
 
     width: 60% ;
@@ -62,4 +59,32 @@ margin-top: 50px;
 
     background-image: url(images/shapes/Frame\ 57.jpg);
     background-position:left;background-position:left;
+}
+.order-button
+{
+
+    background-image: linear-gradient(orange, red);
+    font-size: large;
+    padding: 10px 40px;
+    border-radius: 100px;
+
+color: white;
+text-decoration: none;
+
+margin: 100px;
+}
+.second-pic{
+
+
+    margin-top: 50px;
+    margin-left: 100px;
+}
+.second-banner{
+
+
+    background-image: url(images/shapes/7.png);
+}
+.half-width a{
+
+    pos
 }
